tests/Jroc.Test262.Tests/built-ins/Error/JavaScript/name.js
assert.sameValue(Error.prototype.name, 'Error');


